tests/m1/negative/private_reexport_const.ax
module private_reexport_const;

import m1lib.reexport_facade;

fn main() -> i32 {
    return hidden_base;
}

